using System;
using Common.EventSystem;
using UnityEngine;

namespace Feature.State.View
{
    public class EnemyView : MonoBehaviour
    {
        
    }
}