using Common.EventSystem;
using UnityEngine;

namespace Feature.State.View
{
    public class StateCanvas : MonoBehaviour
    {
        
    }
}